--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:qdgfQjS+MQVQsyuLpoJBN10cfUazqqMDPqvYAm+glGs=
 APP_DEBUG=true
-APP_URL=http://getFood
+APP_URL=http://localhost
 LANGUAGE_URL=true
 
 LOG_CHANNEL=stack
