--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "hackzilla/password-generator": "^1.4",
         "laravel/framework": "5.8.*",
         "laravel/horizon": "^3.1",
         "laravel/tinker": "^1.0"
