add repo, mappers, bussiness

--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-GOOGLE_CLIENT_ID=842448417502-juanuf7atvpt2jpsojetr2uroogtn54h.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=LHcfMzHdmFjcqA-t5csYk_ds
-GOOGLE_REDIRECT=http://localhost/callback
+GOOGLE_CLIENT_ID="${GOOGLE_CLIENT_ID}"
+GOOGLE_CLIENT_SECRET="${GOOGLE_CLIENT_SECRET}"
+GOOGLE_REDIRECT="${REDIRECT_URL}"
