--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/horizon": "^3.1",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "mcamara/laravel-localization": "^1.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
